--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -66,7 +66,7 @@
                 <div class="date">
                     <p> {{ .Date }}</p>
                 </div>
-                <a href="/content?id={{ .Id }}"></a>
+                <a href="/content?id={{ .Id }}"><button type="button"></button></a>
             </div>
             {{ end }}
         </div>
