--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -19,11 +19,11 @@
     <div class="header_right">
         {{ if eq .Connected false }}
             <div class="login">
-                <a href="/login"><strong>Connection</strong></a>
+                <a href="/login">Connection</a>
             </div>
         {{ else }}
             <div class="logout">
-                <a href="/logout"><strong>Logout</strong></a>
+                <a href="/logout">Logout</a>
             </div>
             <div class="profil">
                 <a href="/profile"><img src="/templates/image/profil.jpg"></a>
@@ -32,13 +32,7 @@
     </div>
 </div>
 
-<div class="navbar">
-    <div class="catbar">
-        <div class="cat"><a href="/">Category 1</a></div>
-        <div class="cat"><a href="/">Category 2</a></div>
-        <div class="cat"><a href="/">Category 3</a></div>
-    </div>
-</div>
+
 <div class="content">
     <div class="content_top">
         {{ if eq .Connected false }}
@@ -49,11 +43,15 @@
             <div class="hi">
                 <p>Bonjour {{ .User.Username }}</p>
             </div>
-            <div class="new_discution" ><a href="/write"><i class='bx bxs-conversation'></i>New discution</a></div>
+            <div class="new_discution" ><a href="/write"><i class='bx bxs-conversation'></i>New post</a></div>
         {{ end }}
     </div>
     <div class="content_bot">
-        <div class="cb_left"></div>
+        <div class="cb_left">
+            <div class="cat"><a href="/">Category 1</a></div>
+            <div class="cat"><a href="/">Category 2</a></div>
+            <div class="cat"><a href="/">Category 3</a></div>
+        </div>
         <div class="cb_right">
             {{ range .Posts}}
             <div class="title">
