--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -4,6 +4,8 @@ body {
     overflow: hidden;
     flex-direction: column;
     overflow-y: auto;
+    height: auto;
+    width: auto;
 }
 
 .header {    
@@ -24,12 +26,9 @@ body {
     
         h2 {
             margin: 40px;
-            font-size: 30px;
-
-            :hover {
-                color: #ffffff;
-                transition: 0.2s;
-            }
+            font-size: auto;
+            height: auto;
+            width: auto;
 
         }
 
@@ -39,24 +38,29 @@ body {
             flex-direction: row;
             flex-wrap: nowrap;
             align-items: center;
+            height: auto;
+            width: auto;
 
             .logout {
+                height: auto;
+                width: auto;
 
                 a {
                     background-color: #fe5526e6;
                     color: #ececec;
                     border-radius: 20px;
-                    height: 5.5vh;
-                    width: 16vh;
+                    height: 5vh;
+                    width: 12vh;
                     display: flex;
                     flex-direction: row;
                     align-items: center;
                     justify-content: center;
                     margin: 0 30px 0 30px;
                     box-shadow: 0px 1px 8px 0px #00000037;
-                    font-size: 14px;
+                    font-size: 15px;
                     padding: 0 auto;
                     transition: 0.2s;
+                    font-weight: 500;
     
                     &:hover {
                         color: #ffffff;
@@ -71,6 +75,9 @@ body {
             }
 
             .login {
+                height: auto;
+                width: auto;
+
                 a {
                     background-color: #fe5526e6;
                     color: #ececec;
@@ -84,6 +91,7 @@ body {
                     margin: 20px;
                     box-shadow: 0px 1px 8px 0px #00000037;
                     font-size: 14px;
+                    font-weight: 100;
     
                     &:hover {
                         color: #ffffff;
@@ -99,6 +107,9 @@ body {
 
             .profil {
                 display: flex;
+                flex-direction: column;
+                height: auto;
+                width: auto;
 
                 a {
                     img {
@@ -107,6 +118,7 @@ body {
                         height: 6vh;
                         width: 6vh;
                         box-shadow: 0px 1px 8px 0px #00000037;
+                        margin-right: 1vh;
 
                         &:hover {
                             box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.435);
@@ -123,6 +135,10 @@ body {
 
         .header_middle {
             position: inherit;
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            width: auto;
             
             .search {
                 border: 1px solid rgba(73, 78, 81, 0.616);
@@ -167,63 +183,30 @@ body {
         }
 
     }
-
-.navbar {
-    background-color: #ececec35;
-    color: var(--whi);
-    display: flex;
-    flex-direction: row;
-    padding: 1vh;
-    height: 3.5vh;
-    width: 100vw;
-    text-align: center;
-    position: relative;
-    margin-top: 9vh;
-
-    .catbar {
-        margin: 0 auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        position: relative;
-
-        .cat {
-            margin: auto;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            padding: 0 50px 0 50px;
-            font-size: 15px;
-            position: relative;
-            color: var(--whi);
-
-            a {
-                &:hover {
-                    border-bottom: 2.3px solid #fe5526db;
-                    line-height: 3.2vh;
-                }
-
-            }
-
-        }
-
-    }
-
-}
     
 .content {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: auto;
+    padding: 10vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: space-around;
 
     .content_top {
         background-color: #36393d8d;
         box-shadow: 3px 5px 20px 0px #00000052;
         color: var(--whi);
         display: flex;
-        align-items: center;
         flex-direction: row;
         margin: 20px auto;
         height: 15vh;
         width: 90vw;
+        align-content: center;
+        align-items: center;
+        flex-wrap: wrap;
 
         .not_connected {
             margin: 0 0 0 60px;
@@ -231,12 +214,10 @@ body {
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-
-            h1 {
-                font-size: 30px;
-                font-weight: 600;
-                margin: 0;
-            }
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            width: auto;
 
         }
 
@@ -246,24 +227,20 @@ body {
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
+            height: auto;
+            width: auto;
 
-            h1 {
-                font-size: 30px;
-                font-weight: 600;
-                margin: 0;
-            }
-
-            h2 {
+            p {
                 font-size: 20px;
-                font-weight: 400;
-                margin: 0;
+                font-weight: 60;
+                margin: 0 0 0 0;
             }
 
         }
 
         .new_discution {
             height: 5vh;
-            width: 21vh;
+            width: 19vh;
             border: 2px solid #fe5526cf;
             border-radius: 25px;
             position: relative;
@@ -272,6 +249,7 @@ body {
             justify-content: center;
             margin: auto 60px auto auto;
             z-index: 1;
+            flex-direction: column;
 
             &:hover {
                 border: 2px solid #fe5526;
@@ -287,6 +265,7 @@ body {
                 align-items: center;
                 justify-content: center;
                 transition: 0.2s;
+                font-weight: 500;
 
                 &:hover {
                     color: #fe5526;
@@ -313,6 +292,13 @@ body {
     }
 
     .content_bot {
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        width: auto;
+        flex-wrap: nowrap;
+        margin: 15px auto;
+        
         
         .cb_right {
             background-color: #36393d8d;
@@ -321,10 +307,31 @@ body {
             display: flex;
             align-items: center;
             flex-direction: row;
-            margin: 25px 50px auto auto;
+            margin-left: 10px;
             height: 30vw;
             width: 65vw;
             position: relative;
+            overflow-y: scroll;
+
+            .title {
+                position: inherit;
+                margin: 0 0 0 60px;
+                top: 0;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                height: auto;
+                width: auto;
+
+                p {
+                    font-size: 20px;
+                    font-weight: 60;
+                    margin: 0 0 0 0;
+                    padding: 50px;
+                }
+
+            }
         }
 
         .cb_left {
@@ -332,13 +339,14 @@ body {
             box-shadow: 3px 5px 20px 0px #00000052;
             color: var(--whi);
             display: flex;
-            align-items: center;
-            flex-direction: row;
-            margin: auto auto auto 60px;
-            padding: auto;
             height: 30vw;
             width: 22vw;
-            position: absolute;
+            margin-right: 10px;
+            position: relative;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            overflow-y: scroll;
         }
 
     }
