--- a/templates/scss/style_profile.scss
+++ b/templates/scss/style_profile.scss
@@ -3,5 +3,17 @@ body{
     display: flex;
     overflow: hidden;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: hidden;
+}
+
+.user {
+    background-color: var(--ony);
+    width: 82%;
+    min-height: 40vw;
+    height: auto;
+    display: inline;
+    margin: 14vh auto 10vh auto;
+    display: inline-block;
+    white-space: normal;
+    
 }
