--- a/templates/scss/style_signup.scss
+++ b/templates/scss/style_signup.scss
@@ -16,7 +16,10 @@ body {
     }
 
     h1 {
-
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: auto;
         padding: 15px;
     }
 
@@ -24,6 +27,8 @@ body {
         display: flex;
         flex-direction: column;
         margin-top: 14px;
+        height: auto;
+        width: auto;
 
 
         input[type="firstname"],
@@ -31,7 +36,7 @@ body {
         input[type="username"],
         input[type="email"],
         input[type="password"] {
-            padding: 12px;
+            padding: 11px;
             border: none;
             border-radius: 5px;
             background-color: gray;
@@ -59,7 +64,7 @@ body {
     }
 
     button {
-        padding: 13px 30px;
+        padding: 13px;
         border-radius: 5px;
         margin: 1vw;
         border: none;
@@ -69,6 +74,11 @@ body {
         outline: none;
         cursor: pointer;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        height: auto;
+        width: auto;
 
         &:hover {
             background-color: #fe5526;
@@ -77,6 +87,11 @@ body {
 
     .log {
         margin-top: 15px;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: auto;
+        
       a {
 
         span {
