--- a/templates/html/content.html
+++ b/templates/html/content.html
@@ -74,11 +74,16 @@
                 {{ end }}
             </div>
         </div>
-        <form action="/addcomment" method="post">
-            <input type="text" autocomplete="false" name="Comment">
-            <input type="hidden" name="PostID" value="{{ .Post.Id }}">
-            <input type="submit" value="Envoyer">
-        </form>
+        {{ if eq .Connected true }}
+            <h2>Écrire un commentaire</h2>
+            <form action="/addcomment" method="post">
+                <input type="text" autocomplete="false" name="Comment">
+                <input type="hidden" name="post" value="{{ .Post.Id }}">
+                <input type="submit" value="Envoyer">
+            </form>
+        {{ else }}
+            <p>Vous devez être connecté pour poster un commentaire</p>
+        {{ end }}
     </div>
 </div>
 </body>
