--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -311,27 +311,29 @@ body {
             height: 30vw;
             width: 65vw;
             position: relative;
-            overflow-y: scroll;
 
-            .title {
+            .post {
                 position: inherit;
-                margin: 0 0 0 60px;
-                top: 0;
                 display: flex;
                 flex-direction: row;
-                align-items: center;
-                justify-content: center;
-                height: auto;
-                width: auto;
+                justify-content: space-around;
+                height: 100%;
+                width: 100%;
+                top: 0;
+                align-items: baseline;               
 
                 p {
-                    font-size: 20px;
+                    font-size: auto;
                     font-weight: 60;
-                    margin: 0 0 0 0;
-                    padding: 50px;
+                }
+
+                h2 {
+                    font-size: auto;
+                    font-weight: 500;
                 }
 
             }
+
         }
 
         .cb_left {
