--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -43,7 +43,7 @@
             <div class="hi">
                 <p>Bonjour {{ .User.Username }}</p>
             </div>
-            <div class="new_discution" ><a href="/write"><i class='bx bxs-conversation'></i>New post</a></div>
+            <div class="new_discution"><a href="/write"><i class='bx bxs-conversation'></i>New post</a></div>
         {{ end }}
     </div>
     <div class="content_bot">
@@ -54,18 +54,20 @@
         </div>
         <div class="cb_right">
             {{ range .Posts}}
-            <div class="post">
-                <div class="title">
-                    <h2>{{ .Titre }}</h2>
+                <div class="post">
+                    <div class="title">
+                        <h2>{{ .Titre }}</h2>
+                    </div>
+                    <div class="autor">
+                        <p>{{ .Auteur.Username }}</p>
+                    </div>
+                    <div class="date">
+                        <p> {{ .Date }}</p>
+                    </div>
+                    <a href="/content?id={{ .Id }}">
+                        <button type="button"></button>
+                    </a>
                 </div>
-                <div class="autor">
-                    <p>{{ .Auteur.Username }}</p>
-                </div>
-                <div class="date">
-                    <p> {{ .Date }}</p>
-                </div>
-                <a href="/content?id={{ .Id }}"><button type="button"></button></a>
-            </div>
             {{ end }}
         </div>
     </div>
