--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -32,6 +32,14 @@
     </div>
 </div>
 <div class="user">
+    <div class="information">
+        <div class="image">
+            <img src="/templates/image/profil.jpg">
+        </div>
+        <div class="name">
+            <h2>{{ .User.Username }}</h2>
+        </div>
+    </div>
 </div>
 </body>
 </html>
