--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -39,7 +39,36 @@
         <div class="name">
             <h2>{{ .User.Username }}</h2>
         </div>
+        <div class="prenom">
+            <h2>{{ .User.FirstName }}</h2>
+        </div>
+        <div class="nom">
+            <h2>{{ .User.LastName }}</h2>
+        </div>
+        <div class="email">
+            <h2>{{ .User.Email }}</h2>
+        </div>
+        <div class="date">
+            <h2>{{ .User.CreationDate }}</h2>
+        </div>
     </div>
+    <form action="/modify" method="post" class="mdp">
+        <div class="mdp1">
+            <h2>Change your password</h2>
+        </div>
+        <div class="mdp2">
+            <input type="password" name="password_old" placeholder="Password" class="password" autocomplete="off">
+        </div>
+        <div class="mdp3">
+            <input type="password" name="password_new" placeholder="Password" class="password" autocomplete="off">
+        </div>
+        <div class="mdp4">
+            <input type="password" name="password_confirm" placeholder="Password" class="password" autocomplete="off">
+        </div>
+        <div class="mdp5">
+            <button type="submit" class="button">Change</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
