--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -51,6 +51,9 @@
         <div class="date">
             <h2>{{ .User.CreationDate }}</h2>
         </div>
+        <form action="/modify_content">
+            <button type="submit" class="button">Modify Informations</button>
+        </form>
     </div>
     <form action="/modify" method="post" class="mdp">
         <div class="mdp1">
