--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -37,11 +37,11 @@
     <div class="content_top">
         {{ if eq .Connected false }}
             <div class="not_connected">
-                <p>Vous n'êtes pas connecté</p>
+                <p>You are not connected</p>
             </div>
         {{ else }}
             <div class="hi">
-                <p>Bonjour {{ .User.Username }}</p>
+                <p>Hello {{ .User.Username }}</p>
             </div>
             <div class="new_discution" ><a href="/write"><i class='bx bxs-conversation'></i>New post</a></div>
         {{ end }}
@@ -53,19 +53,38 @@
             <div class="cat"><a href="/">Category 3</a></div>
         </div>
         <div class="cb_right">
-            {{ range .Posts}}
-            <div class="post">
-                <div class="title">
-                    <h2><a href="/content?id={{ .Id }}">{{ .Titre }}</a></h2>
+            <div class="contentHead">
+                <div class="hAll">
+                    <div class="hPost">
+                        <p class="head">Post</p>
+                    </div>
+                    <div class="hUser">
+                        <p class="head">User</p>
+                    </div>
+                    <div class="hDate">
+                        <p class="head">Date</p>
+                    </div>
                 </div>
-                <div class="autor">
-                    <p>{{ .Auteur.Username }}</p>
+                {{ range .Posts}}
+                <div class="post">
+                    <div class="cPost">
+                        <div class="title">
+                            <p><a href="/content?id={{ .Id }}">{{ .Titre }}</a></p>
+                        </div>
+                    </div>
+                    <div class="cAutor">
+                        <div class="autor">
+                            <p>{{ .Auteur.Username }}</p>
+                        </div>
+                    </div>
+                    <div class="cDate">
+                        <div class="date">
+                            <p> {{ .Date }}</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="date">
-                    <p> {{ .Date }}</p>
-                </div>
+                {{ end }}
             </div>
-            {{ end }}
         </div>
     </div>
 </div>
