--- a/templates/html/writePost.html
+++ b/templates/html/writePost.html
@@ -7,28 +7,34 @@
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link rel="stylesheet" href="templates/css/style_writePost.css">
     <title>Forum</title>
 </head>
 <body>
 <div class="header" oneclick="window.location.href='index.html'">
-    <h2>Forum</h2>
+    <h2><a href="/">Forum</a></h2>
     <div class="header_middle">
         <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
     </div>
     <div class="header_right">
-        <a href="/login">Connexion</a>
+        <div class="login">
+            <a href="/login"><strong>Connection</strong></a>
+        </div>
+        <div class="profil">
+            <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+        </div>
     </div>
 </div>
 <div class="content">
     <div class="content_top">
         <h2>Do You want to write new Post {{ .User.Username }} ?</h2>
+    </div>
+    <div class="content_bot">
         <form action="/writing" method="post">
             <input type="text" name="Title" placeholder="Title" class="title" autocomplete="off">
             <input type="text" name="Content" placeholder="Content" class="content" autocomplete="off">
             <input type="submit" value="Submit" class="submit">
         </form>
-    </div>
-    <div class="content_bot">
     </div>
 </div>
 </body>
