--- a/templates/html/content.html
+++ b/templates/html/content.html
@@ -26,7 +26,7 @@
                 <a href="/logout">Déconnexion</a>
             </div>
             <div class="profil">
-                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+                <a href="/profile"><img src="{{ .User.Avatar }}"></a>
             </div>
         {{ end }}
     </div>
