--- a/templates/css/style_writePost.css
+++ b/templates/css/style_writePost.css
@@ -6,7 +6,8 @@
   justify-content: center;
 }
 .content .content_top h2 {
-  font-weight: 400;
+  font-weight: 350;
+  font-size: 24px;
 }
 .content .content_bot {
   display: flex;
@@ -14,6 +15,87 @@
   align-content: center;
   height: auto;
   width: auto;
+}
+.content .content_bot form .inputTitle {
+  padding-left: 15px;
+}
+.content .content_bot form .inputTitle .title {
+  border: 1px solid rgba(73, 78, 81, 0.616);
+  border-radius: 5px;
+  background-color: rgba(191, 190, 189, 0.1137254902);
+  color: var(--silv);
+  margin-bottom: 15px;
+  width: 45vw;
+  height: 5vh;
+  box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
+  transition: 0.2s;
+  outline: none;
+  margin-left: 10px;
+}
+.content .content_bot form .inputTitle .title:hover {
+  box-shadow: 0 0 0.2px 0 #000000;
+  background-color: rgba(236, 236, 236, 0.1450980392);
+}
+.content .content_bot form .inputTitle .title:focus {
+  box-shadow: 0 0 0.2px 0 #000000;
+  background-color: var(--silv);
+  color: var(--ony);
+  padding: 1px;
+  outline: none;
+}
+.content .content_bot form .inputContent .content {
+  border: 1px solid rgba(73, 78, 81, 0.616);
+  border-radius: 5px;
+  background-color: rgba(191, 190, 189, 0.1137254902);
+  color: var(--silv);
+  padding: 5px;
+  width: 55vw;
+  height: 40vh;
+  box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
+  transition: 0.2s;
+  outline: none;
+  display: flex;
+}
+.content .content_bot form .inputContent .content:hover {
+  box-shadow: 0 0 0.2px 0 #000000;
+  background-color: rgba(236, 236, 236, 0.1450980392);
+}
+.content .content_bot form .inputContent .content:focus {
+  box-shadow: 0 0 0.2px 0 #000000;
+  background-color: var(--silv);
+  color: var(--ony);
+  padding: 1px;
+  outline: none;
+}
+.content .content_bot form .inputSubmit .submit {
+  background-color: rgba(254, 85, 38, 0.9019607843);
+  color: #ececec;
+  border-radius: 20px;
+  border: none;
+  height: 5vh;
+  width: 12vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0 30px 0 30px;
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2156862745);
+  font-size: 15px;
+  transition: 0.2s;
+  font-weight: 500;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.content .content_bot form .inputSubmit .submit:hover {
+  color: #ffffff;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.334);
+  transition: 0.1s;
+  font-size: 14.8px;
+  background-color: #fe5526;
+}
+.content .content_bot form input[type=text] {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style_writePost.css.map */
