--- a/templates/html/writePost.html
+++ b/templates/html/writePost.html
@@ -17,12 +17,18 @@
         <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
     </div>
     <div class="header_right">
-        <div class="login">
-            <a href="/login"><strong>Connection</strong></a>
-        </div>
-        <div class="profil">
-            <a href="/profile"><img src="/templates/image/profil.jpg"></a>
-        </div>
+        {{ if eq .Connected false }}
+            <div class="login">
+                <a href="/login">Connection</a>
+            </div>
+        {{ else }}
+            <div class="logout">
+                <a href="/logout">Logout</a>
+            </div>
+            <div class="profil">
+                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+            </div>
+        {{ end }}
     </div>
 </div>
 <div class="content">
@@ -31,9 +37,16 @@
     </div>
     <div class="content_bot">
         <form action="/writing" method="post">
-            <input type="text" name="Title" placeholder="Title" class="title" autocomplete="off">
-            <input type="text" name="Content" placeholder="Content" class="content" autocomplete="off">
-            <input type="submit" value="Submit" class="submit">
+            <div class="inputTitle">
+                <a>Title :</a>
+                <input type="text" name="Title" placeholder="Title" class="title" autocomplete="off">
+            </div>
+            <div class="inputContent">
+                <input type="text" name="Content" placeholder="Content" class="content" autocomplete="off">
+            </div>
+            <div class="inputSubmit">
+                <input type="submit" value="Submit" class="submit">
+            </div>
         </form>
     </div>
 </div>
