--- a/templates/scss/style_writePost.scss
+++ b/templates/scss/style_writePost.scss
@@ -6,7 +6,8 @@
         justify-content: center;
 
         h2 {
-            font-weight: 400;
+            font-weight: 350;
+            font-size: 24px;
         }
     }
 
@@ -16,6 +17,113 @@
         align-content: center;
         height: auto;
         width: auto;
+
+        form {
+
+            .inputTitle {
+                padding-left: 15px;
+
+                .title {
+                    border: 1px solid rgba(73, 78, 81, 0.616);
+                    border-radius: 5px;
+                    background-color: #bfbebd1d;
+                    color: var(--silv);
+                    margin-bottom: 15px;
+                    width: 45vw;
+                    height: 5vh;
+                    box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
+                    transition: 0.2s;
+                    outline: none;
+                    margin-left: 10px;
+
+                    &:hover {
+                        box-shadow: 0 0 0.2px 0 #000000;
+                        background-color: #ececec25;
+                    }
+
+                    &:focus {
+                        box-shadow: 0 0 0.2px 0 #000000;
+                        background-color: var(--silv);
+                        color: var(--ony);
+                        padding: 1px;
+                        outline: none;
+                    }
+                }
+
+            }
+            
+            .inputContent {
+
+                .content {
+                    border: 1px solid rgba(73, 78, 81, 0.616);
+                    border-radius: 5px;
+                    background-color: #bfbebd1d;
+                    color: var(--silv);
+                    padding: 5px;
+                    width: 55vw;
+                    height: 40vh;
+                    box-shadow: inset 0 0 2px 0px rgba(0, 0, 0, 0.144);
+                    transition: 0.2s;
+                    outline: none;
+                    display: flex;
+
+                    &:hover {
+                        box-shadow: 0 0 0.2px 0 #000000;
+                        background-color: #ececec25;
+                    }
+
+                    &:focus {
+                        box-shadow: 0 0 0.2px 0 #000000;
+                        background-color: var(--silv);
+                        color: var(--ony);
+                        padding: 1px;
+                        outline: none;
+                    }
+                }
+
+            }
+
+            .inputSubmit {
+
+                .submit {
+                    background-color: #fe5526e6;
+                    color: #ececec;
+                    border-radius: 20px;
+                    border: none;
+                    height: 5vh;
+                    width: 12vh;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 30px 0 30px;
+                    box-shadow: 0px 1px 8px 0px #00000037;
+                    font-size: 15px;
+                    transition: 0.2s;
+                    font-weight: 500;
+                    margin-top: 20px;
+                    cursor: pointer;
+    
+                    &:hover {
+                        color: #ffffff;
+                        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.334);
+                        transition: 0.1s;
+                        font-size: 14.8px;
+                        background-color: #fe5526;
+                    }
+
+                }
+
+            }
+
+            input[type="text"] {
+                font-size: 16px;
+                font-weight: 400;
+            }
+
+        }
+
     }
+
 }
 
