--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .header {    
-    background-color: rgba(54, 57, 61, 0.7921568627);
+    background-color: #36393dca;
     color: var(--whi);
     display: flex;
     flex-direction: column;
