--- a/templates/css/style_writePost.css
+++ b/templates/css/style_writePost.css
@@ -16,8 +16,13 @@
   height: auto;
   width: auto;
 }
+.content .content_bot form {
+  background-color: rgba(54, 57, 61, 0.5529411765);
+  padding: 22px;
+  margin-top: -5px;
+}
 .content .content_bot form .inputTitle {
-  padding-left: 15px;
+  padding-left: 10px;
 }
 .content .content_bot form .inputTitle .title {
   border: 1px solid rgba(73, 78, 81, 0.616);
@@ -64,7 +69,7 @@
   box-shadow: 0 0 0.2px 0 #000000;
   background-color: var(--silv);
   color: var(--ony);
-  padding: 1px;
+  padding: 7px;
   outline: none;
 }
 .content .content_bot form .inputSubmit .submit {
