--- a/templates/html/content.html
+++ b/templates/html/content.html
@@ -55,6 +55,9 @@
                 <div class="date">
                     <p> {{ .Post.Date }}</p>
                 </div>
+                <div class="like">
+                    <p>{{ .Post.Likes }}</p>
+                </div>
             </div>
         </div>
         <div class="cb_right">
@@ -81,6 +84,10 @@
                 <input type="hidden" name="post" value="{{ .Post.Id }}">
                 <input type="submit" value="Envoyer">
             </form>
+                <form action="/like" method="post">
+                    <input type="hidden" name="like" value="{{ .Post.Id }}">
+                    <input type="submit" value="Like">
+                </form>
         {{ else }}
             <p>Vous devez être connecté pour poster un commentaire</p>
         {{ end }}
