dark/white theme

--- a/templates/html/modify_content.html
+++ b/templates/html/modify_content.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="templates/css/style_theme.css">
     <title>Forum</title>
 </head>
 <body>
