--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="templates/css/style.css">
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link rel="stylesheet" href="templates/css/style_theme.css">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
 </head>
@@ -26,7 +27,7 @@
                 <a href="/logout">Logout</a>
             </div>
             <div class="profil">
-                <a href="/profile"><img src="{{ .User.Avatar }}"></a>
+                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
             </div>
         {{ end }}
     </div>
