--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="templates/css/style_index.css">
     <link rel="stylesheet" href="templates/css/style_profile.css">
     <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link rel="stylesheet" href="templates/css/style_theme.css">
     <title>Forum</title>
 </head>
 <body>
