--- a/templates/scss/style_login.scss
+++ b/templates/scss/style_login.scss
@@ -9,7 +9,7 @@ body{
     width: auto;
 
     .container{
-        background-color: #36393d8d;
+        background-color: red;
         margin-top: 20vh;
         display: flex;
         flex-direction: row;
@@ -18,6 +18,7 @@ body{
         justify-content: center;
         flex-wrap: nowrap;
         width: 92vw;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
 
         
         .leftbox{    
