--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -27,7 +27,7 @@
                 <a href="/logout">Logout</a>
             </div>
             <div class="profil">
-                <a href="/profile"><img src="/templates/image/profil.jpg"></a>
+                <a href="/profile"><img src="{{ .User.Avatar }}"></a>
             </div>
         {{ end }}
     </div>
