--- a/templates/scss/style_index.scss
+++ b/templates/scss/style_index.scss
@@ -238,6 +238,19 @@ body {
 
         }
 
+        .not_connected {
+            margin: 0 35% 0 40%;
+            height: auto;
+            width: auto;
+
+            p {
+                font-size: 20px;
+                font-weight: 60;
+                margin: 0 0 0 0;
+            }
+
+        }
+
         .new_discution {
             height: 5vh;
             width: 19vh;
